# video-transcription

./: README.md  main.py  pyproject.toml
src/video_transcription/: audio_extractor.py  main.py  srt_generator.py  transcriber.py  utils.py
